Inclusión de Patch en swagger
